--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <title> first react app </title>
-
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 </head>
+
 <body>
   <div id='app'></div>
 
   <script>
+    console.log('Test')
+    console.log('React', window.React)
 
   </script>
 </body>
